--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,27 @@
     transform: rotate(360deg);
   }
 }
+
+.headers {
+  background-color: rgb(233, 224, 224);
+  height: 40px;
+  display: flex;
+  justify-content: flex-end;
+}
+.span{
+    color: rgb(11, 11, 11);
+    position: absolute;
+    margin-top: 2px;
+    margin-right: 19px;
+    z-index: 5;
+}
+
+.img {
+  height: 30px;
+  position: absolute;
+  z-index: 5;
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 20px;
+  margin-top: 10px;
+}
